logo, text, hover

--- a/index.html
+++ b/index.html
@@ -11,9 +11,15 @@
 
 <body>
   <div class='pageOption'>
+    <div class='option-text'>Fotografia <br /> studyjna</div>
+    <div class='option-text'>Fotografia <br /> przedszkolna</div>
+  </div>
+  <div class='pageOption'>
     <div class='option'></div>
     <div class='option'></div>
   </div>
+  <div id="romb"></div>
+  <div class="logo"></div>
 </body>
 
-</html>
+</html> 
