--- a/index.html
+++ b/index.html
@@ -10,16 +10,9 @@
 </head>
 
 <body>
-  <div class='pageOption'>
-    <div class='option-text'>Fotografia <br /> studyjna</div>
-    <div class='option-text'>Fotografia <br /> przedszkolna</div>
-  </div>
-  <div class='pageOption'>
-    <div class='option'></div>
-    <div class='option'></div>
-  </div>
-  <div id="romb"></div>
-  <div class="logo"></div>
+  <div id="app"></div>
+
+  <script src='./dist/out.js'></script>
 </body>
 
 </html> 
